ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ui
  namespace: monitoring
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx # already set field in spec 
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - prometheus.localdev.me
    secretName: prometheus-ingress-cert
  rules:
  # Use the host you used in your kubernetes Ingress Configurations
  - host: prometheus.localdev.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port: 
              number: 80
